# reVault

./: .dockerignore  .gitignore  README.md  SECURITY.md  agents.md  dist-workspace.toml  rust-toolchain.toml
.github/: SECURITY.md
bindings/cpp/: CMakeLists.txt  README.md  domain_codec.hpp  domain_models.hpp  revault_api.cpp  revault_api.hpp
bindings/e2e/c/: CMakeLists.txt  conformance.c
bindings/e2e/cpp/: CMakeLists.txt  conformance.cpp
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/revault_api/: __init__.py  _domain.py  _revault_native.py  facade.py  revault_bindings_pb2.py  revault_native.py
bindings/python/revault_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bindings/python/revault_api/_flatbuffers/: revault_bindings_generated.py
bindings/release/package-managers/cmake/: CMakeLists.txt  (+1 more)
bindings/rust/: Cargo.toml  README.md
bindings/rust/src/: lib.rs
rust/: AGENTS.md  Cargo.toml  package-lock.json
rust/docs/: dependency_review.md  performance.md  toolchain.md
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: header.rs  key_directory.rs  pages_recovery.rs  paths.rs
rust/lockbox_cli/: Cargo.toml  PGP_REVAULT_KEY_CLAIMS.md
rust/lockbox_cli/tests/: agent_flow.rs  cli_flow.rs  contact_receive_alias.rs  publish_integration.rs
rust/lockbox_core/: ARCHIVE_FORMAT.md  Cargo.toml  README.md
rust/lockbox_core/benches/: performance.rs  pgp_compare.rs
rust/lockbox_core/examples/: files_and_directories.rs  forms.rs  recovery.rs  symlinks_and_permissions.rs  variables.rs
rust/lockbox_core/src/: api_tests.rs  constants.rs  error.rs  fixture_artifact_tests.rs  lib.rs  lockbox.rs  vault_bridge.rs  vault_integration.rs
rust/lockbox_core/tests/: endian_interop.rs  public_api_suite.rs
rust/lockbox_key_server/: BENCHMARKS.md  CLI_SWITCHES.md  CLI_VAULT_SHARE_DESIGN.md  Cargo.toml  DESIGN.md  KEY_SERVER_CONFIG.md  REDUNDANCY.md
rust/lockbox_key_server/src/: install.rs  lib.rs  main.rs  server.rs  store.rs
rust/lockbox_key_server/tests/: e2e_failover.rs  protocol_store.rs
rust/lockbox_publish_protocol/: Cargo.toml  README.md
rust/lockbox_publish_protocol/src/: client.rs  lib.rs  protocol.rs  replication.rs  status.rs  topology.rs
rust/lockbox_publish_protocol/tests/: client.rs
rust/lockbox_share_protocol/tests/: client.rs
rust/lockbox_vault/: Cargo.toml
rust/lockbox_vault/src/: active_secret.rs  agent_protocol.rs  content_key_store.rs  key_format.rs  lib.rs  noop_store.rs  vault.rs  vault_directory.rs
rust/lockbox_vault/tests/: vault_api.rs
rust/revault_bindings/: Cargo.toml  build.rs  revault_api.h
rust/revault_bindings/benches/: structured_transport.rs
rust/revault_bindings/src/: lib.rs
rust/revault_cli/: CHANGELOG.md  Cargo.toml  README.md
rust/revault_cli/src/: main.rs  secret_prompt.rs
rust/revault_cli/tests/: agent_flow.rs  cli_flow.rs  completion.rs  migration_cli.rs  publish_integration.rs
rust/revault_cli/wix/: main.wxs
rust/revault_key_server/: BENCHMARKS.md  CLI_SWITCHES.md  CLI_VAULT_PUBLISH_DESIGN.md  Cargo.toml  DESIGN.md  INSTALL.md  KEY_SERVER_CONFIG.md  README.md  REDUNDANCY.md  TROUBLESHOOTING.md  build.rs
rust/revault_key_server/src/: install.rs  lib.rs  main.rs  server.rs  server_log.rs  store.rs
rust/revault_key_server/tests/: e2e_failover.rs  http_server.rs  protocol_store.rs
rust/revault_lockbox_api/: ARCHIVE_FORMAT.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  README.md
rust/revault_lockbox_api/benches/: performance.rs  pgp_compare.rs
rust/revault_lockbox_api/examples/: files_and_directories.rs  forms.rs  recovery.rs  symlinks_and_permissions.rs  variables.rs
rust/revault_lockbox_api/src/: api_tests.rs  compression.rs  compression_regression_tests.rs  constants.rs  error.rs  fixture_artifact_tests.rs  lib.rs  lockbox.rs  vault_integration.rs
rust/revault_lockbox_api/tests/: endian_interop.rs  public_api_suite.rs
rust/revault_migrate_archive_v1/: CHANGELOG.md  Cargo.toml  README.md
rust/revault_migrate_archive_v1/src/: archive_v1.rs  lib.rs
rust/revault_migrate_archive_v1/tests/: protocol.rs
rust/revault_migrate_vault_v1/: CHANGELOG.md  Cargo.toml  README.md
rust/revault_migrate_vault_v1/src/: lib.rs  vault_v1.rs
rust/revault_migrate_vault_v1/tests/: protocol.rs
rust/revault_migration/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
rust/revault_migration/src/: archive.rs  journal.rs  lib.rs  vault.rs
rust/revault_migration/tests/: migration_flow.rs
rust/revault_migration_format/: CHANGELOG.md  Cargo.toml  README.md
rust/revault_migration_format/src/: artifact.rs  lib.rs  model.rs
rust/revault_page_api/: CHANGELOG.md  Cargo.toml  README.md
rust/revault_page_api/src/: canary.rs  capabilities.rs  config.rs  error.rs  lib.rs  secure_access.rs  secure_string.rs  secure_vec.rs  tests.rs
rust/revault_publish_protocol/: Cargo.toml  README.md
rust/revault_publish_protocol/src/: lib.rs  payload.rs  protocol.rs  replication.rs  status.rs  topology.rs
rust/revault_publish_protocol/tests/: integration.rs
rust/revault_tooling/: Cargo.toml
rust/revault_tooling/src/: e2e.rs  main.rs  package_conformance.rs  publication.rs  release.rs  repository.rs
rust/revault_vault_api/: AGENT_SLEEP_VM_TESTING.md  CHANGELOG.md  Cargo.toml  README.md
rust/revault_vault_api/src/: active_secret.rs  agent_client.rs  agent_config.rs  agent_log.rs  agent_protocol.rs  content_key_store.rs  key_format.rs  lib.rs  noop_store.rs  platform_secret_store.rs  sleep_watcher.rs  unix.rs  vault.rs  vault_directory.rs  windows.rs
rust/revault_vault_api/tests/: vault_api.rs
rust/revault_wasm_bindings/: Cargo.toml
rust/revault_wasm_bindings/src/: lib.rs
rust/revault_wire/: Cargo.toml
rust/revault_wire/src/: lib.rs
rust/tools/: agent_sleep_windows_libvirt_host_test.sh  check_required.sh  clippy_advisory.sh  compare_archive_compression.sh  generate_api_docs.sh  measure_key_server_performance.sh  run_network_tests.sh
rust/xtask/: Cargo.toml  README.md
rust/xtask/src/: command.rs  compression.rs  install.rs  main.rs  quality.rs
(+1532 files in other folders)
