[workspace]
members = [
    "revault_page_api",
    "revault_lockbox_api",
    "revault_vault_api",
    "revault_migration_format",
    "revault_migrate_vault_v1",
    "revault_migrate_archive_v1",
    "revault_migration",
    "revault_cli",
    "revault_publish_protocol",
    "revault_wire",
    "revault_key_server",
    "revault_bindings",
    "revault_wasm_bindings",
    "revault_tooling",
    "xtask",
]
resolver = "2"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = ["github"]
packages = ["revault_cli"]
tag-namespace = "revault_cli-v"
github-attestations = true
pr-run-mode = "plan"
publish-jobs = ["./revault-cli-crates"]

[workspace.metadata.dist.dependencies.apt]
libdbus-1-dev = "*"
pkg-config = "*"

[workspace.metadata.dist.github-custom-runners]
global = "ubuntu-24.04"
x86_64-unknown-linux-gnu = "ubuntu-24.04"
aarch64-unknown-linux-gnu = "ubuntu-24.04-arm"
x86_64-apple-darwin = "macos-15-intel"
aarch64-apple-darwin = "macos-15"
x86_64-pc-windows-msvc = "windows-2025"
