[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "revault-api"
version = "0.1.0"
description = "Python ctypes bindings for reVault"
requires-python = ">=3.10"
dependencies = ["protobuf>=3.20"]
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
]

[project.urls]
Repository = "https://github.com/onepub-dev/reVault"

[tool.setuptools.packages.find]
include = ["revault_api*"]

[tool.setuptools.package-data]
revault_api = ["_native/**/*"]
