[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "revault-api"
version = "0.2.0"
description = "Python ctypes bindings for reVault"
requires-python = ">=3.10"
dependencies = ["protobuf>=3.20"]
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
]

[project.urls]
Repository = "https://github.com/onepub-dev/reVault"

[tool.setuptools.packages.find]
include = ["revault_api*"]

[tool.setuptools.package-data]
revault_api = ["_native/**/*"]

[tool.ruff]
target-version = "py310"
extend-exclude = ["**/revault_bindings_pb2.py"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"**/facade.py" = ["E701", "E702", "F401"]
