[package]
name = "lockbox-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
revault_lockbox_api = { path = "../revault_lockbox_api" }

[[bin]]
name = "header"
path = "fuzz_targets/header.rs"
test = false
doc = false

[[bin]]
name = "key_directory"
path = "fuzz_targets/key_directory.rs"
test = false
doc = false

[[bin]]
name = "pages_recovery"
path = "fuzz_targets/pages_recovery.rs"
test = false
doc = false

[[bin]]
name = "paths"
path = "fuzz_targets/paths.rs"
test = false
doc = false
