[package]
name = "lockbox_key_server"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "High-throughput reVault key rendezvous server"

[lib]
name = "lockbox_key_server"
path = "src/lib.rs"

[[bin]]
name = "lockbox_key_server"
path = "src/main.rs"

[dependencies]
getrandom = "0.2"
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "hostname",
    "smtp-transport",
    "rustls-tls",
] }
lockbox_publish_protocol = { path = "../lockbox_publish_protocol" }
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_EventLog"] }
