[package]
name = "revault_cli"
version = "0.0.3"
edition = "2021"
rust-version = "1.95"
license-file = "LICENSE"
description = "CLI for reVault encrypted lockboxes, store files, variables and forms with integration to your platform key storage"
repository = "https://github.com/onepub-dev/reVault"
documentation = "https://docs.rs/revault_cli"
readme = "README.md"
exclude = [
    "testbox",
    "*.lbox",
    "*.lbox.lock",
    "*.profile-backup",
    ".env",
]

[[bin]]
name = "lockbox"
path = "src/main.rs"

[[bin]]
name = "lbx"
path = "src/bin/lbx.rs"

[dependencies]
clap = { version = "4.6.1", default-features = false, features = [
    "error-context",
    "color",
    "help",
    "std",
    "usage",
] }
clap_complete = { version = "4.6.7", default-features = false, features = [
    "unstable-dynamic",
] }
revault_lockbox_api = { version = "0.0.4", path = "../revault_lockbox_api" }
revault_publish_protocol = { version = "0.0.3", path = "../revault_publish_protocol" }
revault_vault_api = { version = "0.0.4", path = "../revault_vault_api" }
revault_migration = { version = "0.0.1", path = "../revault_migration" }

getrandom = "0.4"
serde_json = "1"
sha2 = "0.11"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }

[dev-dependencies]
revault_key_server = { path = "../revault_key_server" }
revault_vault_api_v1 = { package = "revault_vault_api", version = "=0.0.2" }
revault_lockbox_api_v1 = { package = "revault_lockbox_api", version = "=0.0.2" }
tempfile = "3"
