[package]
name = "revault_cli"
version = "0.0.3"
edition = "2021"
rust-version = "1.95"
authors = ["OnePub IP Pty Ltd <support@onepub.dev>"]
license-file = "LICENSE"
description = "CLI for reVault encrypted lockboxes, store files, variables and forms with integration to your platform key storage"
repository = "https://github.com/onepub-dev/reVault"
homepage = "https://github.com/onepub-dev/reVault"
documentation = "https://docs.rs/revault_cli"
readme = "README.md"
exclude = [
    "testbox",
    "*.lbox",
    "*.lbox.lock",
    "*.profile-backup",
    ".env",
]

[package.metadata.dist]
display-name = "reVault CLI"
install-path = "~/.revault/bin"
installers = ["shell", "powershell", "msi"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
unix-archive = ".tar.gz"

[package.metadata.wix]
upgrade-guid = "A6F49109-D525-434D-815E-1AE5C8160B52"
path-guid = "09D9BEC0-8140-4FF1-9F2F-87F0D78FE444"
license = "LICENSE"
eula = false

[[bin]]
name = "lockbox"
path = "src/main.rs"

[[bin]]
name = "lbx"
path = "src/bin/lbx.rs"

[dependencies]
clap = { version = "4.6.1", default-features = false, features = [
    "error-context",
    "color",
    "help",
    "std",
    "usage",
] }
clap_complete = { version = "4.6.7", default-features = false, features = [
    "unstable-dynamic",
] }
revault_lockbox_api = { version = "0.0.4", path = "../revault_lockbox_api" }
revault_publish_protocol = { version = "0.0.3", path = "../revault_publish_protocol" }
revault_vault_api = { version = "0.0.4", path = "../revault_vault_api" }
revault_migration = { version = "0.0.1", path = "../revault_migration" }

getrandom = "0.4"
serde_json = "1"
sha2 = "0.11"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }

[dev-dependencies]
revault_key_server = { path = "../revault_key_server" }
revault_vault_api_v1 = { package = "revault_vault_api", version = "=0.0.2" }
revault_lockbox_api_v1 = { package = "revault_lockbox_api", version = "=0.0.2" }
tempfile = "3"
