[package]
name = "lockbox_key_server"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license-file = "LICENSE"
description = "High-throughput reVault key rendezvous server"

[lib]
name = "lockbox_key_server"
path = "src/lib.rs"

[[bin]]
name = "lockbox_key_server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.9", default-features = false, features = [
    "http1",
    "query",
    "tokio",
] }
bytes = "1"
clap = { version = "4.6.1", default-features = false, features = [
    "error-context",
    "help",
    "std",
    "usage",
] }
getrandom = "0.4"
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "hostname",
    "smtp-transport",
    "rustls-tls",
] }
lockbox_publish_protocol = { version = "0.1.0-alpha.1", path = "../lockbox_publish_protocol" }
serde = { version = "1", features = ["derive"] }
sha2 = "0.11"
tokio = { version = "1", features = ["net", "rt-multi-thread", "time"] }
toml = "0.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_EventLog"] }
