[package]
name = "revault_lockbox_api"
version = "0.0.2"
edition = "2021"
rust-version = "1.88"
license-file = "LICENSE"
description = "reVault lockbox API to create and manage lockboxes"
repository = "https://github.com/onepub-dev/reVault"
documentation = "https://docs.rs/revault_lockbox_api"
readme = "README.md"

[lib]
name = "revault_lockbox_api"
path = "src/lib.rs"

[features]
vault-integration = []
native-zstd-encoder = ["dep:zstd"]

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.11"
ed25519-dalek = "2"
getrandom = "0.4"
hkdf = "0.13"
revault_page_api = { version = "0.0.2", path = "../revault_page_api" }
ml-dsa = { version = "0.1", features = ["getrandom"] }
ml-kem = { version = "0.3.2", features = ["getrandom"] }
sha2 = "0.11"
unicode-normalization = "0.1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = "1.9"
ruzstd = { version = "0.8.3", git = "https://github.com/bsutton/zstd-rs", rev = "3f877ed916fd2a8687913f5c130f5f81c7dbcd2b" }
sysinfo = { version = "0.39.6", default-features = false, features = [
    "system",
] }
zstd = { version = "0.13.3", default-features = false, optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
criterion = "0.8.2"
oxiarc-zstd = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "pgp_compare"
harness = false

[[bench]]
name = "compression_corpus"
path = "benches/probes/compression_corpus.rs"
harness = false
