[package]
name = "revault_migrate_vault_v1"
version = "0.0.1"
edition = "2021"
rust-version = "1.95"
license-file = "LICENSE"
description = "Historical native vault-format-v1 exporter for reVault migrations"
repository = "https://github.com/onepub-dev/reVault"
readme = "README.md"

[[bin]]
name = "revault-migrate-vault-v1"
path = "src/bin/revault-migrate-vault-v1.rs"

[dependencies]
getrandom = "0.4"
revault_migration_format = { version = "0.0.1", path = "../revault_migration_format" }
revault_vault_api_v1 = { package = "revault_vault_api", version = "=0.0.2" }
revault_lockbox_api_v1 = { package = "revault_lockbox_api", version = "=0.0.2" }
sha2 = "0.11"
zeroize = "1.9"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
