[package]
name = "revault_migration_format"
version = "0.0.1"
edition = "2021"
rust-version = "1.95"
license-file = "LICENSE"
description = "Encrypted streaming migration artifact format for reVault"
repository = "https://github.com/onepub-dev/reVault"
readme = "README.md"

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.11"
getrandom = "0.4"
revault_page_api = { version = "0.0.3", path = "../revault_page_api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
zeroize = "1.9"

[dev-dependencies]
tempfile = "3"
