[package]
name = "revault_tooling"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
publish = false
license-file = "../revault_lockbox_api/LICENSE"
description = "Repository-owned generation, release, and conformance tooling for reVault"

[[bin]]
name = "revault-tool"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
