[package]
name = "revault_vault_api"
version = "0.0.3"
edition = "2021"
rust-version = "1.95"
license-file = "LICENSE"
description = "reVault API for creating and managing vaults"
repository = "https://github.com/onepub-dev/reVault"
documentation = "https://docs.rs/revault_vault_api"
readme = "README.md"
exclude = ["AGENT_SLEEP_VM_TESTING.md"]

[lib]
name = "revault_vault_api"
path = "src/lib.rs"

[dependencies]
base64ct = { version = "1", features = ["alloc"] }
chacha20poly1305 = "0.11"
getrandom = "0.4"
revault_lockbox_api = { version = "0.0.3", path = "../revault_lockbox_api", features = ["vault-integration"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
zeroize = "1.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "4.1.4", default-features = false, features = ["v1"] }
dbus = "0.9.11"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "4.1.4", default-features = false, features = ["v1"] }
objc2-core-foundation = { version = "0.3.2", features = ["CFRunLoop"] }
objc2-io-kit = { version = "0.3.2", default-features = false, features = [
    "libc",
    "pwr_mgt",
] }

[target.'cfg(windows)'.dependencies]
keyring = { version = "4.1.4", default-features = false, features = ["v1"] }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_EventLog",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Power",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
