[package]
name = "revault_wasm_bindings"
version = "0.0.1"
edition = "2021"
rust-version = "1.95"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
revault_lockbox_api = { path = "../revault_lockbox_api", features = ["bindings"] }
revault_page_api = { path = "../revault_page_api" }
revault_vault_api = { path = "../revault_vault_api" }
wasm-bindgen = "0.2"
js-sys = "0.3"
