cmake_minimum_required(VERSION 3.20)
project(revault_c_conformance LANGUAGES C)

add_executable(revault_c_conformance conformance.c)
find_path(REVAULT_API_INCLUDE_DIR revault_api.h REQUIRED)
if(WIN32)
  find_library(REVAULT_API_LIBRARY NAMES revault_api.dll revault_api REQUIRED)
else()
  find_library(REVAULT_API_LIBRARY revault_api REQUIRED)
endif()
target_include_directories(revault_c_conformance PRIVATE ${REVAULT_API_INCLUDE_DIR})
target_link_libraries(revault_c_conformance PRIVATE ${REVAULT_API_LIBRARY})
